health/base/health-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: health
spec:
  finalizers:
  - kubernetes
