health/base/health-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  namespace: health
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  defaultBackend:
    service:
      name: health-node
      port:
        number: 8443
  tls:
    - hosts:
        - kube.drive.test.sunet.se 
      secretName: tls-secret
  
  rules:
  - host: kube.drive.test.sunet.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: health-node
            port:
              number: 8080
